[tool.poetry]
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A simple, time-tested, family of random hash functions in Python, based on CRC32 and xxHash, affine transformations, and the Mersenne Twister."
homepage = "https://github.com/jlumbroso/python-random-hash"
include = [
  "README.md",
]
keywords = []
license = "LGPL-3.0-or-later"
name = "randomhash"
readme = "README.md"
repository = "https://github.com/jlumbroso/python-random-hash"
version = "0.5.0"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38,39}

[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
python = "^3.8"
xxhash = "^3.0.0"

[tool.poetry.dev-dependencies]
codecov = "^2.1.12"
# ipykernel = "^5.3.4"
# ipywidgets = "^7.5.1"
pytest = "^5.2"
pytest-cov = "^3.0.0"
# pytest-mock = "^3.3.1"
pytest-repeat = "^0.9.1"
pytest-subtests = "^0.3.2"
# sphinx = "^3.3.0"
# sphinx-autodoc-typehints = "^1.11.1"
# sphinx-rtd-theme = "^0.5.0"
tox = "^3.20.1"
tox-poetry-dev-dependencies = "^0.0.5"

# dependabot dependency pins (vulnerability warnings)
# babel = "^2.10.1"
# bleach = "^3.3.0"
# ipython = "^7.31.1"
# jinja2 = "^3.1.2"
# notebook = "^6.4.10"
# py = "^1.11.0"
# pygments = "^2.12.0"
# urllib3 = "^1.26.9"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
